--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json"
@@ -16,7 +17,8 @@
     "@idena/vrf-js": "^1.0.1",
     "@lionello/secp256k1-js": "^1.1.0",
     "crypto-js": "^4.2.0",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "typescript": "^5.4.4"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
