--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nesa-sdk",
   "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json"
