--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "tsBuildInfoFile": "build/.tsbuildinfo",
     "inlineSourceMap": true,
     "declaration": true,
-    "outDir": "build",
+    "outDir": "dist",
     "rootDir": "src",
     "strict": true,
     "noFallthroughCasesInSwitch": true,
