--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "postinstall": "patch-package"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "@lionello/secp256k1-js": "^1.1.0",
     "bn.js": "^4.11.8",
     "crypto-js": "^4.2.0",
+    "patch-package": "^8.0.0",
     "stream-browserify": "^3.0.0",
     "typescript": "^5.4.4"
   },
