--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "noUnusedParameters": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "pretty": true,
+    "pretty": true
   },
   "include": ["src/**/*.ts"]
 }
