--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2020",
-    "lib": ["es2020"],
+    "lib": ["es2020", "dom"],
     "moduleResolution": "node",
     "incremental": true,
     "tsBuildInfoFile": "build/.tsbuildinfo",
