--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@idena/vrf-js": "^1.0.1",
     "@keplr-wallet/types": "^0.12.80",
     "@lionello/secp256k1-js": "^1.1.0",
+    "bignumber.js": "^9.1.2",
     "crypto-js": "^4.2.0",
     "stream-browserify": "^3.0.0"
   },
