--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cosmjs/amino": "^0.32.3",
+    "@cosmjs/crypto": "^0.32.3",
+    "@cosmjs/encoding": "^0.32.3",
     "@cosmjs/proto-signing": "^0.32.3",
     "@cosmjs/stargate": "^0.32.3",
     "@cosmjs/tendermint-rpc": "^0.32.3",
@@ -17,6 +20,7 @@
     "@keplr-wallet/types": "^0.12.80",
     "@lionello/secp256k1-js": "^1.1.0",
     "bignumber.js": "^9.1.2",
+    "cosmjs-types": "^0.9.0",
     "crypto-js": "^4.2.0",
     "stream-browserify": "^3.0.0"
   },
