--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nesa-sdk",
+  "name": "nesa-sdk-1",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -18,6 +18,7 @@
     "@cosmjs/tendermint-rpc": "^0.32.3",
     "@idena/vrf-js": "^1.0.1",
     "@keplr-wallet/types": "^0.12.80",
+    "@leapwallet/cosmos-snap-provider": "^0.1.26",
     "@lionello/secp256k1-js": "^1.1.0",
     "bignumber.js": "^9.1.2",
     "cosmjs-types": "^0.9.0",
