feat: add node demo

--- a/demo/package.json
+++ b/demo/package.json
@@ -2,7 +2,7 @@
     "dependencies": {
         "@cosmjs/proto-signing": "^0.32.3",
         "@cosmjs/stargate": "^0.32.3",
-        "nesa.js": "file:../dist"
+        "nesa.js": "git+https://github.com/nesaorg/nesa.js#68d3cabffa2cd89e8283472952f08e1ad70d1aac"
     },
     "devDependencies": {
         "@types/node": "^20.11.30"
